--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    width: auto;
+    margin-top: 10%;
     background-color: #1c92d2;
     font-size: 1.2em;
     height: 100%;
@@ -29,7 +29,7 @@ body {
     font-family: 'Roboto';
     max-width: 100%;
     margin: 2%;
-
+    height: 100%;
     overflow: auto;
 }
 
@@ -57,7 +57,7 @@ body {
     max-height: 100%;
     width: 70%;
     height: auto;
-    /* overflow: auto; */
+    overflow: auto;
     position: relative;
 
 }
@@ -122,8 +122,8 @@ body {
 
 .toggle_q_a {
     position: absolute;
-    top: -21%;
-    right: 0;
+    top: 1%;
+    right: 1%;
     padding: 0.5em;
     background-color: black;
     color: white;
